--- a/main.ipynb
+++ b/main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5444/3330149865.py:1: DtypeWarning: Columns (8,10,11,12,13,14,15,16,17,18,35,37) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_18673/3330149865.py:1: DtypeWarning: Columns (8,10,11,12,13,14,15,16,17,18,35,37) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('merged_df.csv')\n"
      ]
     },
@@ -519,7 +519,7 @@
        "4       4.577326          0.00       9.742105  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -628,7 +628,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
        " 'complex_name']"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1185,7 @@
        "4       4.577326          0.00       9.742105  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,14 +1238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5444/1389342240.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_18673/1389342240.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  g.set_xticklabels(xlabels)\n"
      ]
     },
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1354,14 +1354,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5444/439658321.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_18673/439658321.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  g.set_xticklabels(xlabels)\n"
      ]
     },
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1414,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1426,14 +1426,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5444/1113686665.py:13: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_18673/1113686665.py:13: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  g.set_yticklabels(xlabels)\n"
      ]
     },
@@ -3107,9 +3107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build Model\n",
-    "\n",
-    "Feature selection shown no improvements on model performance we will focus on data cleaning and feature engineering."
+    "## Build Model"
    ]
   },
   {
@@ -3121,16 +3119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5444/3605614827.py:10: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_datetime without passing `errors` and catch exceptions explicitly instead\n",
+      "/tmp/ipykernel_18673/3605614827.py:10: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_datetime without passing `errors` and catch exceptions explicitly instead\n",
       "  c_model[\"combined_date_con\"] = pd.to_datetime(c_model[\"fire_year\"] * 1000 + c_model[\"cont_doy\"], format=\"%Y%j\", errors=\"ignore\")\n",
-      "/tmp/ipykernel_5444/3605614827.py:12: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/tmp/ipykernel_18673/3605614827.py:12: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  c_model[\"combined_date_con\"] = pd.to_datetime(c_model[\"combined_date_con\"], errors=\"coerce\")\n"
      ]
     }
@@ -3161,7 +3159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -3200,7 +3198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3257,7 +3255,7 @@
        "      <td>0.1</td>\n",
        "      <td>38.984167</td>\n",
        "      <td>-120.735556</td>\n",
-       "      <td>422</td>\n",
+       "      <td>486</td>\n",
        "      <td>4</td>\n",
        "      <td>83.65</td>\n",
        "      <td>0.0</td>\n",
@@ -3270,7 +3268,7 @@
        "      <td>0.1</td>\n",
        "      <td>38.559167</td>\n",
        "      <td>-119.913333</td>\n",
-       "      <td>24</td>\n",
+       "      <td>28</td>\n",
        "      <td>4</td>\n",
        "      <td>1320.00</td>\n",
        "      <td>0.0</td>\n",
@@ -3283,7 +3281,7 @@
        "      <td>0.1</td>\n",
        "      <td>38.559167</td>\n",
        "      <td>-119.933056</td>\n",
-       "      <td>24</td>\n",
+       "      <td>28</td>\n",
        "      <td>4</td>\n",
        "      <td>1200.00</td>\n",
        "      <td>0.0</td>\n",
@@ -3296,7 +3294,7 @@
        "      <td>0.1</td>\n",
        "      <td>38.635278</td>\n",
        "      <td>-120.103611</td>\n",
-       "      <td>25</td>\n",
+       "      <td>29</td>\n",
        "      <td>4</td>\n",
        "      <td>1320.00</td>\n",
        "      <td>2.0</td>\n",
@@ -3309,7 +3307,7 @@
        "      <td>0.1</td>\n",
        "      <td>38.688333</td>\n",
        "      <td>-120.153333</td>\n",
-       "      <td>422</td>\n",
+       "      <td>486</td>\n",
        "      <td>4</td>\n",
        "      <td>1200.00</td>\n",
        "      <td>3.0</td>\n",
@@ -3330,14 +3328,14 @@
        "\n",
        "                      longitude  fips_name  state  duration  week_day  month  \n",
        "combined_date_dis                                                             \n",
-       "2004-05-31 19:00:21 -120.735556        422      4     83.65       0.0    5.0  \n",
-       "2004-06-28 16:00:00 -119.913333         24      4   1320.00       0.0    6.0  \n",
-       "2004-06-28 16:00:00 -119.933056         24      4   1200.00       0.0    6.0  \n",
-       "2004-06-30 18:00:00 -120.103611         25      4   1320.00       2.0    6.0  \n",
-       "2004-07-01 18:00:00 -120.153333        422      4   1200.00       3.0    7.0  "
+       "2004-05-31 19:00:21 -120.735556        486      4     83.65       0.0    5.0  \n",
+       "2004-06-28 16:00:00 -119.913333         28      4   1320.00       0.0    6.0  \n",
+       "2004-06-28 16:00:00 -119.933056         28      4   1200.00       0.0    6.0  \n",
+       "2004-06-30 18:00:00 -120.103611         29      4   1320.00       2.0    6.0  \n",
+       "2004-07-01 18:00:00 -120.153333        486      4   1200.00       3.0    7.0  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
