--- a/main.ipynb
+++ b/main.ipynb
@@ -4215,6 +4215,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More Data Visualization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 117,
    "metadata": {},
