--- a/main.ipynb
+++ b/main.ipynb
@@ -4379,12 +4379,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Jet"
+    "# Seasonal Decomposition to observe Trends and Seasonal with Residual chart"
    ]
   },
   {
@@ -4469,7 +4467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
